--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.coagulate.SL</groupId>
     <artifactId>gphudjslbot</artifactId>
-    <version>1.1.17</version>
+    <version>VERSIONNUMBERGOESHERE</version>
     <repositories>
         <repository>
             <id>central</id>
