--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,9 +4,17 @@
 # https://help.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
 
 version: 2
+registries:
+  github:
+    type: maven-repository
+    url: https://maven.pkg.github.com/
+    username: iprice
+    password: ${{secrets.PACKAGE_READ}}
 updates:
   - package-ecosystem: "maven" # See documentation for possible values
     directory: "/" # Location of package manifests
+    registries:
+      - github
     schedule:
       interval: "daily"
     assignees:
