--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -13,7 +13,30 @@ jobs:
       packages: read
       
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout GPHUD-JSLBot
+        uses: actions/checkout@v2
+        with:
+          path: GPHUD-JSLBot
+      - name: Checkout JavaCore
+        uses: actions/checkout@v2
+        with:
+          repository: 'CoagulateSL/JavaCore'
+          path: JavaCore
+      - name: Checkout SLCore
+        uses: actions/checkout@v2
+        with:
+          repository: 'CoagulateSL/SLCore'
+          path: SLCore     
+      - name: Checkout JSLBot
+        uses: actions/checkout@v2
+        with:
+          repository: 'CoagulateSL/JSLBot'
+          path: JSLBot   
+      - name: Checkout JSLBotBridge
+        uses: actions/checkout@v2
+        with:
+          repository: 'CoagulateSL/JSLBotBridge'
+          path: JSLBotBridge             
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
@@ -23,4 +46,5 @@ jobs:
       - name: Build with Maven
         env: 
           PACKAGE_READ: ${{ secrets.PACKAGE_READ }}
-        run: mvn --batch-mode --update-snapshots verify -s $GITHUB_WORKSPACE/settings.xml
+        working-directory: GPHUD-JSLBot
+        run: mvn --batch-mode --update-snapshots verify -s $GITHUB_WORKSPACE/GPHUD-JSLBot/settings.xml
