--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -17,7 +17,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: 'CoagulateSL/CoagulateSL'        
-          path: CoagulateSL       
+          path: CoagulateSL
+          token: ${{ secrets.PACKAGE_READ }}
       - name: Checkout JavaCore
         uses: actions/checkout@v2
         with:
